--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - uses: actions/setup-npm
+      - uses: CraigAllardyce/actions/setup-npm
       # - run: npm ci
       # - run: npm test
