--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -4,10 +4,10 @@ jobs:
   Unit-Test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - uses: ./setup-npm
+      - uses: ./.github/actions/setup-npm
       # - run: npm ci
       # - run: npm test
