--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -9,5 +9,5 @@ jobs:
         with:
           node-version: '14'
       - uses: ./.github/actions/setup-npm
-      # - run: npm ci
-      # - run: npm test
+      - run: npm ci
+      - run: npm test
