--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: echo $FOOBAR
+      - run: echo "FOOBAR - $FOOBAR"
       # - uses: ./.github/actions/setup-npm
       # - run: npm ci
       # - run: npm test
