--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -9,9 +9,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - uses: ./.github/actions/setup-npm      
+      - uses: ./.github/actions/setup-auth      
         env:
             ARTIFACTORY_AUTH: ${{ secrets.ARTIFACTORY_AUTH }}
-            ARTIFACTORY_EMAIL: ${{ secrets.ARTIFACTORY_EMAIL }}
+            ARTIFACTORY_AUTH: ${{ secrets.ARTIFACTORY_AUTH }}
+            SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
+            SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       - run: npm ci
       - run: npm test
