--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -9,11 +9,13 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - uses: ./.github/actions/setup-auth      
         env:
             ARTIFACTORY_AUTH: ${{ secrets.ARTIFACTORY_AUTH }}
             ARTIFACTORY_EMAIL: ${{ secrets.ARTIFACTORY_EMAIL }}
             SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
-            SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      - run: npm ci
-      - run: npm test
+      - run: ssh -T git@scm.dimensiondata.com
+      # - run: npm test
