--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -18,5 +18,5 @@ jobs:
             ARTIFACTORY_AUTH: ${{ secrets.ARTIFACTORY_AUTH }}
             ARTIFACTORY_EMAIL: ${{ secrets.ARTIFACTORY_EMAIL }}
             SSH_KNOWN_HOSTS: ${{ secrets.SSH_KNOWN_HOSTS }}
-      - run: ssh -T git@scm.dimensiondata.com
-      # - run: npm test
+      - run: npm ci
+      - run: npm test
